[package]
name = "design-pattern-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "factory"
path = "src/factory/main.rs"

[[bin]]
name = "abstract_factory"
path = "src/abstract_factory/main.rs"
